[gd_scene load_steps=2 format=3 uid="uid://cnqeinueajck5"]

[ext_resource type="Script" path="res://Partie.gd" id="1_fhivi"]

[node name="Partie" type="Node2D"]
script = ExtResource("1_fhivi")

[node name="Tour" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Mot" type="Label" parent="."]
offset_top = 30.0
offset_right = 40.0
offset_bottom = 53.0

[node name="Button" type="Button" parent="."]
offset_top = 60.0
offset_right = 66.0
offset_bottom = 91.0
text = "Suivant"

[node name="ElimHBox" type="HBoxContainer" parent="."]
visible = false
offset_right = 292.0
offset_bottom = 40.0

[node name="Mona" type="Button" parent="ElimHBox"]
layout_mode = 2
text = "Mona"

[node name="Paul" type="Button" parent="ElimHBox"]
layout_mode = 2
text = "Paul"

[node name="Camille" type="Button" parent="ElimHBox"]
layout_mode = 2
text = "Camile"

[node name="Gabriel" type="Button" parent="ElimHBox"]
layout_mode = 2
text = "Grabriel"

[node name="Ewen" type="Button" parent="ElimHBox"]
layout_mode = 2
toggle_mode = true
text = "Ewen"

[node name="Result" type="Label" parent="."]
offset_top = 45.0
offset_right = 40.0
offset_bottom = 68.0

[node name="Restart" type="Button" parent="."]
visible = false
offset_top = 70.0
offset_right = 65.0
offset_bottom = 101.0
text = "Restart"

[node name="Elimines" type="Label" parent="."]
visible = false
offset_left = 80.0
offset_top = 70.0
offset_right = 158.0
offset_bottom = 93.0
text = "Elimin√©s : "

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ElimHBox/Mona" to="." method="_on_mona_pressed"]
[connection signal="pressed" from="ElimHBox/Paul" to="." method="_on_paul_pressed"]
[connection signal="pressed" from="ElimHBox/Camille" to="." method="_on_camille_pressed"]
[connection signal="pressed" from="ElimHBox/Gabriel" to="." method="_on_gabriel_pressed"]
[connection signal="pressed" from="ElimHBox/Ewen" to="." method="_on_ewen_pressed"]
[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
